# tensorkraft-design

./: 1-tensorkraft_architecture_design-claude.md  11-fresh_critique-gemini.md  13-critique-gemini.md  14.1-critique_response_v6-claude.md  15.2-fresh_critique_supplement-gemini.md  16.1-critique_response_v7-claude.md  18-tensorkraft_architecture_design_v7-claude.md  18-tensorkraft_architecture_design_v7_1-claude.md  19-critique-gemini.md  22-critique-chatgpt.md  3-tensorkraft_architecture_design-claude.md  31.1-critique_response-claude.md  32-critique-gemini.md  33-final_response-claude.md  4-critique-gemini.md  6-critique-gemini.md  8-critique-gemini.md  9-tensorkraft_architecture_design_v3-claude.md  9.1-critique_response-claude.md  ARCHITECTURE.md  DEVNOTES.md  prompt-maybe.md
TEP/: 1-DDD-gemini.md  1-TEP-gemini.md
history/: 10.1-critique_response_v4-claude.md  10.2-tensorkraft_architecture_design_v4-claude.md  12.1-critique_response_v5-claude.md  12.2-tensorkraft_architecture_design_v5-claude.md  14.2-tensorkraft_architecture_design_v6-claude.md  15.1-fresh_critique-gemini.md  17-critique-gemini.md  2-critique-gemini.md  20.1-critique_response-claude.md  21-tensorkraft_architecture_design_v8-claude.md  23-critique-gemini.md  24.1-critique_response-claude.md  25-tensorkraft_architecture_design_v8_1-claude.md  26-critique-gemini.md  27-tensorkraft_architecture_design_v8_2-claude.md  28-critique-gemini.md  29.1-critique_response-claude.md  29.2-tensorkraft_architecture_design_v8_3-claude.md  30-critique-claude.md  5-tensorkraft_architecture_design-claude.md  7-tensorkraft_architecture_design_v2-claude.md  9.2-critique_response_response-gemini.md
techspec/: 1_tech-spec_tk-core.md  2_tech-spec_tk-symmetry.md  3_tech-spec_tk-linalg.md  4_tech-spec_tk-contract.md  5_tech-spec_tk-dsl.md  6_tech-spec_tk-dmrg.md  7_tech-spec_tk-dmft.md  8_tech-spec_tk-python.md  format.md
tk-contract/: Cargo.toml  DRAFT_NOTES.md
tk-contract/benches/: contract_benchmarks.rs
tk-contract/src/: cost.rs  error.rs  executor.rs  graph.rs  index.rs  lib.rs  reshape.rs  sparse.rs  structural.rs
tk-contract/src/optimizer/: dp.rs  greedy.rs  mod.rs  treesa.rs
tk-contract/tests/: proptest_contract.rs
tk-core/: Cargo.toml  DRAFT_NOTES.md
tk-core/diagrams/: c4-L1-context.mmd  c4-L2-container.mmd  c4-L3-component.mmd  c4-L4-code-memory.mmd  c4-L4-code-types.mmd  c4-sequence-sweep-step.mmd
tk-core/src/: arena.rs  device.rs  error.rs  lib.rs  matview.rs  pinned.rs  scalar.rs  shape.rs  storage.rs  tensor.rs
tk-core/tests/compile_fail/: arena_tensor_escape_scope.rs  arena_tensor_escape_scope.stderr  arena_tensor_outlives_reset.rs  arena_tensor_outlives_reset.stderr  borrowed_storage_outlives_data.rs  borrowed_storage_outlives_data.stderr  matref_outlives_tensor.rs  matref_outlives_tensor.stderr  slice_view_outlives_tensor.rs  slice_view_outlives_tensor.stderr
tk-dmft/: Cargo.toml  DRAFT_NOTES.md  build.rs
tk-dmft/benches/: dmft_benchmarks.rs
tk-dmft/src/: error.rs  lib.rs
tk-dmft/src/impurity/: bath.rs  discretize.rs  hamiltonian.rs  mod.rs
tk-dmft/src/loop/: config.rs  mixing.rs  mod.rs  stats.rs
tk-dmft/src/mpi/: mod.rs
tk-dmft/src/spectral/: chebyshev.rs  linear_predict.rs  mod.rs  positivity.rs  tdvp.rs
tk-dmft/tests/: proptest_dmft.proptest-regressions  proptest_dmft.rs
tk-dmrg/: Cargo.toml  DRAFT_NOTES.md
tk-dmrg/benches/: dmrg_benchmarks.rs
tk-dmrg/src/: checkpoint.rs  error.rs  lib.rs
tk-dmrg/src/eigensolver/: mod.rs
tk-dmrg/src/environments/: mod.rs
tk-dmrg/src/excited/: mod.rs
tk-dmrg/src/idmrg/: mod.rs
tk-dmrg/src/mpo/: mod.rs
tk-dmrg/src/mps/: mod.rs
tk-dmrg/src/sweep/: mod.rs
tk-dmrg/src/tdvp/: mod.rs
tk-dmrg/src/truncation/: mod.rs
tk-dmrg/tests/: proptest_dmrg.proptest-regressions  proptest_dmrg.rs
tk-dsl/: Cargo.toml  DRAFT_NOTE.md  DRAFT_NOTES.md
tk-dsl/src/: error.rs  index.rs  indexed_tensor.rs  lib.rs  operators.rs  opsum.rs  opterm.rs
tk-dsl/src/lattice/: bethe.rs  chain.rs  mod.rs  square.rs  star.rs  triangular.rs
tk-dsl/tests/: proptest_dsl.rs
tk-linalg/: Cargo.toml  DRAFT_NOTES.md  build.rs
tk-linalg/benches/: linalg_benchmarks.rs
tk-linalg/src/: error.rs  lib.rs  results.rs  tasks.rs  threading.rs  traits.rs
tk-linalg/src/device/: faer.rs  mod.rs
tk-linalg/tests/: block_gemm_realistic.rs  proptest_linalg.rs  spmv_test.rs
tk-python/: Cargo.toml  DRAFT_NOTES.md  build.rs  pyproject.toml
tk-python/src/: error.rs  lib.rs
tk-python/src/bath/: mod.rs
tk-python/src/config/: defaults.rs  mod.rs
tk-python/src/dispatch/: macros.rs  mod.rs
tk-python/src/dmft/: mod.rs  solve.rs  stats.rs
tk-python/src/monitor/: mod.rs
tk-python/src/spectral/: mod.rs  numpy_interop.rs
tk-symmetry/: Cargo.toml  DRAFT_NOTES.md
tk-symmetry/benches/: get_block.rs
tk-symmetry/src/: block_sparse.rs  builtins.rs  error.rs  flat_storage.rs  flux.rs  formats.rs  lib.rs  quantum_number.rs  sector_key.rs
tk-symmetry/src/su2/: cg_cache.rs  mod.rs
tk-symmetry/tests/: proptest_symmetry.rs
