[package]
name = "tk-core"
version = "0.1.0"
edition = "2021"
description = "Core tensor data structures, memory management, and scalar traits for tensorkraft"
license = "MIT OR Apache-2.0"

[features]
default = []
backend-cuda = ["log"]
backend-oxiblas = []

[dependencies]
smallvec = "1"
bumpalo = { version = "3", features = ["collections"] }
num-complex = "0.4"
num-traits = "0.2"
thiserror = "2"
cfg-if = "1"
log = { version = "0.4", optional = true }

[dev-dependencies]
proptest = "1"
trybuild = "1"
