[package]
name = "tk-dmft"
version = "0.1.0"
edition = "2021"
description = "DMFT self-consistency loop, bath discretization, spectral function extraction, and adaptive solver selection for tensorkraft"
license = "MIT OR Apache-2.0"

[dependencies]
tk-core      = { path = "../tk-core" }
tk-symmetry  = { path = "../tk-symmetry" }
tk-linalg    = { path = "../tk-linalg" }
tk-contract  = { path = "../tk-contract" }
tk-dsl       = { path = "../tk-dsl" }
tk-dmrg      = { path = "../tk-dmrg" }

num-complex = "0.4"
num-traits  = "0.2"
smallvec    = "1"
rustfft     = "6"
thiserror   = "2"
log         = "0.4"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

[dev-dependencies]
proptest     = "1"
approx       = "0.5"
rand         = "0.8"
rand_chacha  = "0.3"
criterion    = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dmft_benchmarks"
harness = false

[features]
default      = ["backend-faer", "parallel"]
backend-faer = ["tk-linalg/backend-faer", "tk-dmrg/backend-faer"]
# backend-cuda = ["tk-dmrg/backend-cuda", "tk-core/backend-cuda"]
# backend-mpi  = ["dep:mpi", "dep:sys-info"]
su2-symmetry = ["tk-symmetry/su2-symmetry", "tk-dmrg/su2-symmetry"]
parallel     = ["tk-linalg/parallel", "tk-dmrg/parallel"]
