[package]
name = "tk-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for the tensorkraft tensor network library"
publish = false

[lib]
name = "tensorkraft"
crate-type = ["cdylib"]

[dependencies]
# Upstream crate chain
tk-dmft     = { path = "../tk-dmft", version = "0.1.0" }
tk-dmrg     = { path = "../tk-dmrg", version = "0.1.0" }
tk-linalg   = { path = "../tk-linalg", version = "0.1.0" }
tk-symmetry = { path = "../tk-symmetry", version = "0.1.0" }
tk-core     = { path = "../tk-core", version = "0.1.0" }

# PyO3 and NumPy
pyo3        = { version = "0.21", features = ["abi3-py38"] }
numpy       = "0.21"

# Utilities
num-complex = "0.4"
log         = "0.4"

[dev-dependencies]
pyo3 = { version = "0.21", features = ["auto-initialize"] }

[features]
default          = ["extension-module", "backend-faer", "parallel"]
extension-module = ["pyo3/extension-module"]
backend-faer     = ["tk-dmft/backend-faer", "tk-linalg/backend-faer"]
parallel         = ["tk-dmft/parallel", "tk-linalg/parallel"]
su2-symmetry     = ["tk-dmft/su2-symmetry"]
triqs            = []
